# miniSLAM

./: .gitignore  README.md
config/: realsense_stereo_imu_config.yaml  right.yaml  stereo_imu_config.yaml
src/: CMakeLists.txt  test_node.cpp
src/VIOpkg/: CMakeLists.txt  package.xml  test_node.cpp
src/VIOpkg/feature_tracker/: CMakeLists.txt
src/VIOpkg/feature_tracker/inc/: feature_tracker.h
src/VIOpkg/feature_tracker/src/: feature_tracker.cpp
src/VIOpkg/odometry/: CMakeLists.txt  package.xml
src/VIOpkg/odometry/inc/: estimator.h  feature_manager.h  imu_factor.h  initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  marginalization_factor.h  pose_local_parameterization.h  pre_integrated.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h
src/VIOpkg/odometry/src/: estimator.cpp  feature_manager.cpp  initial_alignment.cpp  initial_sfm.cpp  marginalization_factor.cpp  pose_local_parameterization.cpp  pre_integrated.cpp  projectionOneFrameTwoCamFactor.cpp  projectionTwoFrameOneCamFactor.cpp  utility.cpp
src/VIOpkg/parameters/: CMakeLists.txt
src/VIOpkg/parameters/src/: parameters.cpp  parameters.h
src/VIOpkg/ros_node/: CMakeLists.txt
src/VIOpkg/ros_node/inc/: publisher.h  subscriber.h
src/VIOpkg/ros_node/src/: publisher.cpp  subscriber.cpp
src/camera_models/include/camodocal/calib/: CameraCalibration.h
src/odometry/: CMakeLists.txt
src/odometry/inc/: estimator.h  feature_manager.h  feature_tracker.h  imu_factor.h  initial_alignment.h  initial_sfm.h  marginalization_factor.h  pose_local_parameterization.h  pre_integrated.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameTwoCamFactor.h  publisher.h  subscriber.h
src/odometry/src/: estimator.cpp  feature_manager.cpp  feature_tracker.cpp  initial_alignment.cpp  initial_ex_rotation.cpp  marginalization_factor.cpp  pose_local_parameterization.cpp  pre_integrated.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameTwoCamFactor.cpp  solve_5pts.cpp  subscriber.cpp  utility.cpp
src/parameters/: CMakeLists.txt  package.xml
src/parameters/src/: parameters.cpp  parameters.h
src/ros_node/inc/: subscriber.h
src/ros_node/src/: subscriber.cpp
